# replay

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/skills/address-pr-review/: SKILL.md
.sqlx/: query-953bb5f2c302aa617bb3f16042914f297ea17e7c8bbfd811800e1d8c8222af33.json
docs/adr/: 0001-inline-projection-architecture.md  0002-projection-event-routing.md  0003-policies-as-checkpointed-background-subscribers.md  0004-compaction-synthetic-event-marker-for-policy-feed.md  0005-stream-first-event-emission.md  0006-policy-status-read-only-operational-snapshot.md  0007-dead-letter-retry-reproduces-reaction-from-triggering-event.md  0008-policy-runner-shared-connection-leadership.md  0009-compaction-skips-when-nothing-to-compact.md
es/: Cargo.toml
es/examples/: error_chaining.rs
es/src/: aggregate.rs  error.rs  event.rs  filters.rs  lib.rs  metadata.rs  query.rs  stream.rs
es/src/persistance/: mod.rs  store.rs
es/src/persistance/infrastructure/: in_memory_store.rs  mod.rs
es/src/persistence/: cqrs.rs  error.rs  filters.rs  mod.rs  persisted_event.rs  store.rs
es/src/persistence/infrastructure/: in_memory_store.rs  postgres.rs
es/tests/: aggregate_macro_test.rs  integration_tests.rs  wasm.rs
macros/: Cargo.toml
macros-tests/: Cargo.toml
macros-tests/src/: lib.rs
macros-tests/tests/: aggregate_macro_test.rs  event_derive_test.rs  query_events_test.rs  urn_derive_test.rs
macros/src/: define_aggregate_macro.rs  lib.rs  merge_events_macro.rs
persistence/: Cargo.toml  build.rs
persistence/examples/: global_position.rs
persistence/src/: aggregate_version.rs  cqrs.rs  error.rs  filters.rs  inline_projection.rs  lib.rs  persisted_event.rs  policy.rs  policy_runner.rs  policy_status.rs  query.rs  store.rs
persistence/src/infrastructure/: in_memory_store.rs  mod.rs  postgres.rs
persistence/tests/: integration_tests.rs
persistence/tests/fixtures/: bulk_payments.csv
persistence/tests/migrations/: 0001_init.sql  0002_aggregate_version.sql  0003_projections.sql  0004_append_event_returns_persisted_row.sql  0005_replay_indexes.sql  0006_global_position_projection.sql  0007_global_position.sql  0008_policy_cursors.sql  0009_compacted_snapshot.sql  0010_policy_dead_letters.sql  0011_discarded_dead_letters.sql  0012_last_compacted_version.sql
