[package]
name = "replay"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

urn = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
replay-macros = { path = "../macros" }
tokio = { workspace = true }
tracing-test = { workspace = true }
