[package]
name = "es-replay"
version.workspace = true
edition.workspace = true
description = "Event Sourcing and CQRS library with WASM support"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["event-sourcing", "cqrs", "ddd", "aggregate", "wasm"]
categories = ["asynchronous"]

[lib]
name = "replay"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

urn = { workspace = true }

tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
uuid = { workspace = true, features = ["js", "v4"] }
