[package]
name = "replay-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
replay = { path = "../es" }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

urn = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js", "v4"], default-features = false }
