[package]
name = "es-replay-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for the Replay event sourcing library"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["event-sourcing", "cqrs", "macros", "proc-macro", "wasm"]
categories = ["development-tools::procedural-macro-helpers"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lib]
proc-macro = true
name = "replay_macros"

[dependencies]
replay = { package = "es-replay", path = "../es", version = "0.1.0" }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
async-trait = { workspace = true }

urn = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js", "v4"], default-features = false }
