[package]
name = "replay-persistence"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
replay = { path = "../es" }
replay-macros = { path = "../macros" }

serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

urn = { workspace = true }
uuid = { workspace = true }

chrono = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

sqlx = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

tracing = { workspace = true }
moka = { workspace = true }

[dev-dependencies]
log = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-test = { workspace = true }
testcontainers-modules = { workspace = true }
dotenvy = { workspace = true }
