[package]
name = "replay-persistence"
version.workspace = true
edition.workspace = true
description = "Persistence layer for the Replay event sourcing library (PostgreSQL and in-memory backends)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["event-sourcing", "cqrs", "postgres", "sqlx", "persistence"]
categories = ["database", "asynchronous"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
replay = { path = "../es", version = "0.1.0" }
replay-macros = { path = "../macros", version = "0.1.0" }

serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

urn = { workspace = true }
uuid = { workspace = true }

chrono = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

sqlx = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

tracing = { workspace = true }
moka = { workspace = true }

[dev-dependencies]
log = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-test = { workspace = true }
testcontainers-modules = { workspace = true }
dotenvy = { workspace = true }
